--- a/css/reveal.css
+++ b/css/reveal.css
@@ -96,7 +96,7 @@ body {
     opacity: 1;
     visibility: visible; }
 
-.reveal .slides section .fragment.highlight-red, .reveal .slides section .fragment.highlight-current-red, .reveal .slides section .fragment.highlight-green, .reveal .slides section .fragment.highlight-current-green, .reveal .slides section .fragment.highlight-blue, .reveal .slides section .fragment.highlight-current-blue {
+.reveal .slides section .fragment.highlight-red, .reveal .slides section .fragment.highlight-current-red, .reveal .slides section .fragment.highlight-green, .reveal .slides section .fragment.highlight-current-green, .reveal .slides section .fragment.highlight-blue, .reveal .slides section .fragment.highlight-current-blue, .reveal .slides section .fragment.highlight-current-black, .reveal .slides section .fragment.highlight-black {
   opacity: 1;
   visibility: visible; }
 
@@ -108,6 +108,9 @@ body {
 
 .reveal .slides section .fragment.highlight-blue.visible {
   color: #1b91ff; }
+
+.reveal .slides section .fragment.highlight-black.visible {
+  color: #000; }
 
 .reveal .slides section .fragment.highlight-current-red.current-fragment {
   color: #ff2c2d; }
